# workspace-unused

./: Cargo.toml  README.md
src/: lib.rs  main.rs  parsed.rs  rustdoc.rs  search.rs
