[package]
name = "workspace-unused-deps"
version = "0.1.0"
edition = "2024"

[dependencies]
cargo_toml = "0.22.1"
clap = { version = "4.5.41", features = ["derive"] }
grep = "0.3.2"
rustdoc-json = "0.9.6"
serde = "1.0.219"
serde_json = {version ="1.0.140", features =["unbounded_depth"]}
serde_path_to_error = "0.1.17"
walkdir = "2.5.0"
